added translation to timer start button and timer stop function

--- a/lang/deutsch.json
+++ b/lang/deutsch.json
@@ -13,7 +13,9 @@
     "timer": {
         "title": "Sanduhr",
         "interval": "Zeit pro Runde wählen",
-        "unit": "Sek."
+        "unit": "Sek.",
+        "start": "Start",
+        "stop": "Stop"
     },
     "letter": {
         "title": "Buchstabe würfeln",
